# tlsn-curl

./: .dockerignore  .gitignore  .gitleaks.toml  .ignore  Cargo.toml  Dockerfile.tlsn-server  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
crates/tlsn-cli/: Cargo.toml
crates/tlsn-cli/src/: lib.rs
crates/tlsn-prover/: Cargo.toml
crates/tlsn-prover/src/: main.rs
crates/tlsn-server/: Cargo.toml
crates/tlsn-server/src/: main.rs
crates/tlsn-verifier/: Cargo.toml
crates/tlsn-verifier/src/: main.rs
docs/: development.md  proof-format.md  review-harness.md
docs/issues/: README.md
docs/issues/closed/: .gitkeep  0001-build-repository-skeleton.md  0002-add-npm-compatible-package-entrypoints.md  0003-document-runtime-usage-matrix.md  0004-add-local-tlsn-server-container.md  0005-add-local-docker-compose-stack.md  0006-add-compose-backed-e2e-smoke.md  0007-add-baseline-ci-workflow.md  0008-add-compose-full-test-ci.md  0009-build-direct-tlsn-fetch-executable.md  0010-fix-selective-disclosure-commit-ranges.md  0011-prepare-jsr-publish-metadata.md  0012-prepare-npm-registry-publish.md  0013-add-tag-triggered-publish-workflow.md  0014-switch-license-to-mit.md  0015-add-recv-byte-range-redaction.md  0016-add-structured-response-redaction.md  0017-prove-bitcoin-usd-price-with-response-redaction.md  0018-rewrite-readme-for-tlsnotary-newcomers.md  0019-harden-gstack-pre-commit-gate.md  0020-bind-verified-request-to-claim.md  0021-add-secret-scanning-policy.md  0023-add-binary-tlsn-verifier-backend-tests.md  0024-add-rust-tlsn-verifier-unit-tests.md  0025-add-rust-tlsn-server-unit-tests.md  0026-expand-rust-tlsn-prover-test-coverage.md  0027-add-curl-like-cli-interface.md  0028-rename-tlsn-fetch-to-tlsn-curl.md  0029-add-clean-revealed-json-output.md  0030-reveal-non-sensitive-request-headers.md  0031-build-standalone-tlsn-verify.md  0032-add-unix-stdio-cli-mode.md  0033-remove-library-publish-surface.md  0034-migrate-cli-to-rust.md
docs/issues/pending/: .gitkeep
scripts/: build-cli.sh  check-docs.sh  check-no-local-paths.sh  docker-compose-env.sh  e2e-tlsn.sh  gstack  install.sh  local-down.sh  local-status.sh  local-up.sh  smoke-built-cli.sh  test-all.sh
scripts/git-hooks/: commit-msg  pre-commit
skills/make-issues/: SKILL.md
skills/resolve-issues/: SKILL.md
