[package]
name = "tlsn-curl-prover"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tlsn-prove"
path = "src/main.rs"

[dependencies]
tlsn = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.14" }
tlsn-formats = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.14" }
spansy = { git = "https://github.com/tlsnotary/tlsn-utils", rev = "6f1a934", features = ["serde"] }

k256 = { version = "0.13", features = ["ecdsa"] }
bincode = "1.3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "io-std", "io-util", "fs"] }
tokio-util = { version = "0.7", features = ["compat"] }
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
rand = "0.8"
url = "2"
async-tungstenite = { version = "0.29", features = ["tokio-runtime", "tokio-native-tls"] }
ws_stream_tungstenite = "0.15"
futures = "0.3"
tokio-socks = "0.5"

[profile.release]
strip = true
lto = true
