[package]
name = "tlsn-curl-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tlsn-server"
path = "src/main.rs"

[dependencies]
tlsn = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.14" }

anyhow = "1"
bincode = "1.3"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
k256 = { version = "0.13", features = ["ecdsa"] }
rand = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time"] }
tokio-util = { version = "0.7", features = ["compat"] }

[profile.release]
strip = true
lto = true
