[package]
name = "tlsn-curl-verifier"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tlsn-verifier"
path = "src/main.rs"

[dependencies]
tlsn-attestation = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.14" }
tlsn-core = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.14" }
bincode = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
hex = "0.4"

[profile.release]
strip = true
lto = true
